fix some dark mode issues

--- a/assets/sass/tables.scss
+++ b/assets/sass/tables.scss
@@ -123,7 +123,7 @@ table.dataTable {
     }
     th.weekend,
     td.weekend {
-        background-color: var(--tblr-gray-50);
+        background-color: var(--tblr-bg-surface-tertiary);
     }
     /* order is important, "today” should overwrite "weekend" therefor later in the file */
     th.today {
